// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SkillsDocToCsvTransform should correctly transform Skill data to CSV for a model with a single language 1`] = `
[
  {
    "ALTLABELS_EN": "",
    "CREATEDAT": "1970-01-01T00:00:00.000Z",
    "DEFINITION_EN": "definition_0_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "DESCRIPTION_EN": "description_0_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "ID": "000000000000000000000000",
    "ISLOCALIZED": "true",
    "ORIGINURI": "originUri_0_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_EN": "Skill_0_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "REUSELEVEL": "transversal",
    "SCOPENOTE_EN": "scopeNote_0_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "SKILLTYPE": "knowledge",
    "UPDATEDAT": "1970-01-01T00:00:00.000Z",
    "UUIDHISTORY": "",
  },
  {
    "ALTLABELS_EN": "altLabel_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
altLabel_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "CREATEDAT": "1970-01-01T00:00:00.001Z",
    "DEFINITION_EN": "definition_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "DESCRIPTION_EN": "description_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "ID": "000000000000000000000001",
    "ISLOCALIZED": "false",
    "ORIGINURI": "originUri_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_EN": "Skill_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "REUSELEVEL": "cross-sector",
    "SCOPENOTE_EN": "scopeNote_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "SKILLTYPE": "language",
    "UPDATEDAT": "1970-01-01T00:00:00.001Z",
    "UUIDHISTORY": "uuidHistory_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
uuidHistory_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
  },
  {
    "ALTLABELS_EN": "",
    "CREATEDAT": "1970-01-01T00:00:00.002Z",
    "DEFINITION_EN": "definition_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "DESCRIPTION_EN": "description_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "ID": "000000000000000000000002",
    "ISLOCALIZED": "true",
    "ORIGINURI": "originUri_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_EN": "Skill_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "REUSELEVEL": "occupation-specific",
    "SCOPENOTE_EN": "scopeNote_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "SKILLTYPE": "attitude",
    "UPDATEDAT": "1970-01-01T00:00:00.002Z",
    "UUIDHISTORY": "",
  },
  {
    "ALTLABELS_EN": "altLabel_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
altLabel_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "CREATEDAT": "1970-01-01T00:00:00.003Z",
    "DEFINITION_EN": "definition_3_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "DESCRIPTION_EN": "description_3_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "ID": "000000000000000000000003",
    "ISLOCALIZED": "false",
    "ORIGINURI": "originUri_3_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_EN": "Skill_3_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "REUSELEVEL": "sector-specific",
    "SCOPENOTE_EN": "scopeNote_3_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "SKILLTYPE": "skill/competence",
    "UPDATEDAT": "1970-01-01T00:00:00.003Z",
    "UUIDHISTORY": "uuidHistory_3_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
uuidHistory_4_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
  },
  {
    "ALTLABELS_EN": "",
    "CREATEDAT": "1970-01-01T00:00:00.004Z",
    "DEFINITION_EN": "definition_4_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "DESCRIPTION_EN": "description_4_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "ID": "000000000000000000000004",
    "ISLOCALIZED": "true",
    "ORIGINURI": "originUri_4_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_EN": "Skill_4_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "REUSELEVEL": "",
    "SCOPENOTE_EN": "scopeNote_4_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "SKILLTYPE": "",
    "UPDATEDAT": "1970-01-01T00:00:00.004Z",
    "UUIDHISTORY": "",
  },
  {
    "ALTLABELS_EN": "altLabel_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
altLabel_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "CREATEDAT": "1970-01-01T00:00:00.005Z",
    "DEFINITION_EN": "definition_5_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "DESCRIPTION_EN": "description_5_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "ID": "000000000000000000000005",
    "ISLOCALIZED": "false",
    "ORIGINURI": "originUri_5_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_EN": "Skill_5_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "REUSELEVEL": "transversal",
    "SCOPENOTE_EN": "scopeNote_5_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "SKILLTYPE": "knowledge",
    "UPDATEDAT": "1970-01-01T00:00:00.005Z",
    "UUIDHISTORY": "uuidHistory_5_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
uuidHistory_6_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
  },
]
`;

exports[`SkillsDocToCsvTransform should correctly transform Skill data to CSV for a model with a single language 2`] = `
""ID","ORIGINURI","UUIDHISTORY","DEFINITION_EN","SCOPENOTE_EN","REUSELEVEL","SKILLTYPE","PREFERREDLABEL_EN","ALTLABELS_EN","DESCRIPTION_EN","ISLOCALIZED","CREATEDAT","UPDATEDAT"
"000000000000000000000000","originUri_0_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","definition_0_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","scopeNote_0_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","transversal","knowledge","Skill_0_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","description_0_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","true","1970-01-01T00:00:00.000Z","1970-01-01T00:00:00.000Z"
"000000000000000000000001","originUri_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","uuidHistory_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
uuidHistory_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","definition_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","scopeNote_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","cross-sector","language","Skill_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","altLabel_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
altLabel_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","description_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","false","1970-01-01T00:00:00.001Z","1970-01-01T00:00:00.001Z"
"000000000000000000000002","originUri_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","definition_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","scopeNote_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","occupation-specific","attitude","Skill_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","description_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","true","1970-01-01T00:00:00.002Z","1970-01-01T00:00:00.002Z"
"000000000000000000000003","originUri_3_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","uuidHistory_3_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
uuidHistory_4_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","definition_3_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","scopeNote_3_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","sector-specific","skill/competence","Skill_3_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","altLabel_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
altLabel_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","description_3_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","false","1970-01-01T00:00:00.003Z","1970-01-01T00:00:00.003Z"
"000000000000000000000004","originUri_4_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","definition_4_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","scopeNote_4_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","","Skill_4_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","description_4_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","true","1970-01-01T00:00:00.004Z","1970-01-01T00:00:00.004Z"
"000000000000000000000005","originUri_5_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","uuidHistory_5_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
uuidHistory_6_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","definition_5_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","scopeNote_5_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","transversal","knowledge","Skill_5_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","altLabel_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
altLabel_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","description_5_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","false","1970-01-01T00:00:00.005Z","1970-01-01T00:00:00.005Z"
"
`;

exports[`SkillsDocToCsvTransform should correctly transform Skill data to CSV for a model with multiple languages 1`] = `
[
  {
    "ALTLABELS_EN": "",
    "ALTLABELS_FR": "",
    "CREATEDAT": "1970-01-01T00:00:00.000Z",
    "DEFINITION_EN": "definition_0_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "DEFINITION_FR": "",
    "DESCRIPTION_EN": "description_0_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "DESCRIPTION_FR": "",
    "ID": "000000000000000000000000",
    "ISLOCALIZED": "true",
    "ORIGINURI": "originUri_0_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_EN": "Skill_0_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_FR": "",
    "REUSELEVEL": "transversal",
    "SCOPENOTE_EN": "scopeNote_0_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "SCOPENOTE_FR": "",
    "SKILLTYPE": "knowledge",
    "UPDATEDAT": "1970-01-01T00:00:00.000Z",
    "UUIDHISTORY": "",
  },
  {
    "ALTLABELS_EN": "altLabel_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
altLabel_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "ALTLABELS_FR": "fr_altLabel_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
",
    "CREATEDAT": "1970-01-01T00:00:00.001Z",
    "DEFINITION_EN": "definition_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "DEFINITION_FR": "fr_definition_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "DESCRIPTION_EN": "description_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "DESCRIPTION_FR": "fr_description_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "ID": "000000000000000000000001",
    "ISLOCALIZED": "false",
    "ORIGINURI": "originUri_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_EN": "Skill_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_FR": "fr_Skill_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "REUSELEVEL": "cross-sector",
    "SCOPENOTE_EN": "scopeNote_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "SCOPENOTE_FR": "fr_scopeNote_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "SKILLTYPE": "language",
    "UPDATEDAT": "1970-01-01T00:00:00.001Z",
    "UUIDHISTORY": "uuidHistory_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
uuidHistory_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
  },
  {
    "ALTLABELS_EN": "",
    "ALTLABELS_FR": "",
    "CREATEDAT": "1970-01-01T00:00:00.002Z",
    "DEFINITION_EN": "definition_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "DEFINITION_FR": "",
    "DESCRIPTION_EN": "description_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "DESCRIPTION_FR": "",
    "ID": "000000000000000000000002",
    "ISLOCALIZED": "true",
    "ORIGINURI": "originUri_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_EN": "Skill_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_FR": "",
    "REUSELEVEL": "occupation-specific",
    "SCOPENOTE_EN": "scopeNote_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "SCOPENOTE_FR": "",
    "SKILLTYPE": "attitude",
    "UPDATEDAT": "1970-01-01T00:00:00.002Z",
    "UUIDHISTORY": "",
  },
  {
    "ALTLABELS_EN": "altLabel_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
altLabel_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "ALTLABELS_FR": "fr_altLabel_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
",
    "CREATEDAT": "1970-01-01T00:00:00.003Z",
    "DEFINITION_EN": "definition_3_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "DEFINITION_FR": "fr_definition_3_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "DESCRIPTION_EN": "description_3_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "DESCRIPTION_FR": "fr_description_3_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "ID": "000000000000000000000003",
    "ISLOCALIZED": "false",
    "ORIGINURI": "originUri_3_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_EN": "Skill_3_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_FR": "fr_Skill_3_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "REUSELEVEL": "sector-specific",
    "SCOPENOTE_EN": "scopeNote_3_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "SCOPENOTE_FR": "fr_scopeNote_3_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "SKILLTYPE": "skill/competence",
    "UPDATEDAT": "1970-01-01T00:00:00.003Z",
    "UUIDHISTORY": "uuidHistory_3_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
uuidHistory_4_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
  },
  {
    "ALTLABELS_EN": "",
    "ALTLABELS_FR": "",
    "CREATEDAT": "1970-01-01T00:00:00.004Z",
    "DEFINITION_EN": "definition_4_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "DEFINITION_FR": "",
    "DESCRIPTION_EN": "description_4_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "DESCRIPTION_FR": "",
    "ID": "000000000000000000000004",
    "ISLOCALIZED": "true",
    "ORIGINURI": "originUri_4_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_EN": "Skill_4_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_FR": "",
    "REUSELEVEL": "",
    "SCOPENOTE_EN": "scopeNote_4_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "SCOPENOTE_FR": "",
    "SKILLTYPE": "",
    "UPDATEDAT": "1970-01-01T00:00:00.004Z",
    "UUIDHISTORY": "",
  },
  {
    "ALTLABELS_EN": "altLabel_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
altLabel_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "ALTLABELS_FR": "fr_altLabel_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
",
    "CREATEDAT": "1970-01-01T00:00:00.005Z",
    "DEFINITION_EN": "definition_5_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "DEFINITION_FR": "fr_definition_5_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "DESCRIPTION_EN": "description_5_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "DESCRIPTION_FR": "fr_description_5_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "ID": "000000000000000000000005",
    "ISLOCALIZED": "false",
    "ORIGINURI": "originUri_5_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_EN": "Skill_5_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "PREFERREDLABEL_FR": "fr_Skill_5_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "REUSELEVEL": "transversal",
    "SCOPENOTE_EN": "scopeNote_5_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "SCOPENOTE_FR": "fr_scopeNote_5_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
    "SKILLTYPE": "knowledge",
    "UPDATEDAT": "1970-01-01T00:00:00.005Z",
    "UUIDHISTORY": "uuidHistory_5_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
uuidHistory_6_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
  },
]
`;

exports[`SkillsDocToCsvTransform should correctly transform Skill data to CSV for a model with multiple languages 2`] = `
""ID","ORIGINURI","UUIDHISTORY","DEFINITION_EN","DEFINITION_FR","SCOPENOTE_EN","SCOPENOTE_FR","REUSELEVEL","SKILLTYPE","PREFERREDLABEL_EN","PREFERREDLABEL_FR","ALTLABELS_EN","ALTLABELS_FR","DESCRIPTION_EN","DESCRIPTION_FR","ISLOCALIZED","CREATEDAT","UPDATEDAT"
"000000000000000000000000","originUri_0_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","definition_0_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","scopeNote_0_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","transversal","knowledge","Skill_0_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","","","description_0_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","true","1970-01-01T00:00:00.000Z","1970-01-01T00:00:00.000Z"
"000000000000000000000001","originUri_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","uuidHistory_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
uuidHistory_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","definition_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","fr_definition_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","scopeNote_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","fr_scopeNote_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","cross-sector","language","Skill_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","fr_Skill_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","altLabel_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
altLabel_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","fr_altLabel_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
","description_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","fr_description_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","false","1970-01-01T00:00:00.001Z","1970-01-01T00:00:00.001Z"
"000000000000000000000002","originUri_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","definition_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","scopeNote_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","occupation-specific","attitude","Skill_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","","","description_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","true","1970-01-01T00:00:00.002Z","1970-01-01T00:00:00.002Z"
"000000000000000000000003","originUri_3_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","uuidHistory_3_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
uuidHistory_4_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","definition_3_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","fr_definition_3_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","scopeNote_3_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","fr_scopeNote_3_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","sector-specific","skill/competence","Skill_3_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","fr_Skill_3_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","altLabel_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
altLabel_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","fr_altLabel_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
","description_3_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","fr_description_3_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","false","1970-01-01T00:00:00.003Z","1970-01-01T00:00:00.003Z"
"000000000000000000000004","originUri_4_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","definition_4_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","scopeNote_4_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","","","Skill_4_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","","","description_4_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","","true","1970-01-01T00:00:00.004Z","1970-01-01T00:00:00.004Z"
"000000000000000000000005","originUri_5_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","uuidHistory_5_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
uuidHistory_6_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","definition_5_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","fr_definition_5_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","scopeNote_5_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","fr_scopeNote_5_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","transversal","knowledge","Skill_5_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","fr_Skill_5_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","altLabel_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
altLabel_2_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","fr_altLabel_1_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
","description_5_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","fr_description_5_^°!""§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€","false","1970-01-01T00:00:00.005Z","1970-01-01T00:00:00.005Z"
"
`;

exports[`SkillsDocToCsvTransform test transformSkillSpecToCSVRow() should transform a Skill to a CSV row 1`] = `
{
  "ALTLABELS_EN": "altLabel_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
altLabel_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
  "ALTLABELS_FR": "fr_altLabel_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
",
  "CREATEDAT": "1970-01-01T00:00:00.001Z",
  "DEFINITION_EN": "definition_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
  "DEFINITION_FR": "fr_definition_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
  "DESCRIPTION_EN": "description_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
  "DESCRIPTION_FR": "fr_description_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
  "ID": "000000000000000000000001",
  "ISLOCALIZED": "false",
  "ORIGINURI": "originUri_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
  "PREFERREDLABEL_EN": "Skill_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
  "PREFERREDLABEL_FR": "fr_Skill_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
  "REUSELEVEL": "cross-sector",
  "SCOPENOTE_EN": "scopeNote_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
  "SCOPENOTE_FR": "fr_scopeNote_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
  "SKILLTYPE": "language",
  "UPDATEDAT": "1970-01-01T00:00:00.001Z",
  "UUIDHISTORY": "uuidHistory_1_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€
uuidHistory_2_^°!"§$%&/()=?\`´*+#'-_.,;<>öäü@[]{}|¡“¶¢[]≠¿'„…∞~<•±æœαβγδεζηθικλμνξοπρστυφχψω€€€",
}
`;
